--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="kontakt">
       <h2>📬 Kontakt</h2>
       <p>Mail: martin.gerlach.2950@gmail.com</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/martincgerlach" target="_blank">Martin Gerlach</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/martin-christoffer-gerlach-68272a21a/" target="_blank">Martin Gerlach</a></p>
     </section>
   </main>
 
