--- a/index.html
+++ b/index.html
@@ -34,14 +34,28 @@
     </section>
     <hr />
     
-    <section id="downloads">
-      <h2>📄 Downloads</h2>
-      <ul>
-        <li>📝 <a href="motiveret-ansoegning.pdf">Motiveret ansøgning (PDF)</a></li>
-        <li>📄 <a href="optagelses-case.pdf">Min optagelses-case (PDF)</a></li>
-        <li>📜 <a href="svendebrev.pdf">Svendebrev (PDF)</a></li>
-    </ul>
-    </section>
+    <section id="downloads" class="download-cards">
+  <h2>📁 Downloads</h2>
+
+  <div class="card">
+    <h3>📄 Motiveret ansøgning</h3>
+    <p>Læs hvorfor jeg brænder for Multimediadesign.</p>
+    <a href="Motiveret ansøgning til Multimediedesigner på KEA.pdf" class="download-button" download>Download PDF</a>
+  </div>
+
+  <div class="card">
+    <h3>🖥️ Optagelses-case</h3>
+    <p>Se mit redesign af Elgato Stream Deck og mine tanker bag det.</p>
+    <a href="Martin G – Personligt UI_UX-projekt (Stream Deck).pdf" class="download-button" download>Download PDF</a>
+  </div>
+
+  <div class="card">
+    <h3>📜 Svendebrev</h3>
+    <p>Bevis på min afsluttede IT-supporteruddannelse.</p>
+    <a href="Uddannelsesbevis.pdf" class="download-button" download>Download PDF</a>
+  </div>
+</section>
+
 
     <hr />
     
