update of card name

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="card">
-    <h3>🖥️ Optagelses-case</h3>
+    <h3>🖥️ Beskrivelse af optagelsescase</h3>
     <p>Se mit redesign af Elgato Stream Deck og mine tanker bag det.</p>
     <a href="Martin G – Personligt UI_UX-projekt (Stream Deck).pdf" class="download-button" download>Download PDF</a>
   </div>
