--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
     </section>
     <hr />
   </main>
+
+<footer>
+  <p>© 2025 Martin Gerlach</p>
+</footer>
+
 <script>
   const button = document.getElementById("toggle-theme");
 
