update of light mode emoji

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     document.body.classList.toggle("dark-mode");
 
     if (document.body.classList.contains("dark-mode")) {
-      button.textContent = "☀Light Mode";
+      button.textContent = "☀️Light Mode";
     } else {
       button.textContent = "🌘 Dark Mode";
     }
