tilføjelse af billeder ved siden af download cards

--- a/index.html
+++ b/index.html
@@ -37,24 +37,40 @@
     <section id="downloads" class="download-cards">
     <h2>📁 Downloads</h2>
 
+  <div class="download-item">
   <div class="card">
     <h3>📄 Motiveret Ansøgning</h3>
     <p>Læs hvorfor jeg brænder for Multimediadesign.</p>
     <a href="Motiveret ansøgning til Multimediedesigner på KEA.pdf" class="download-button" download>Download PDF</a>
   </div>
+   <div class="card-image large-image">
+    <img src="billede af motiveret ansøgning.png" alt="Uddrag af ansøgning">
+  </div>
+</div>
 
+<div class="download-item">
   <div class="card">
     <h3>🖥️ Beskrivelse af optagelsescase</h3>
     <p>Se mit redesign af Elgato Stream Deck og mine tanker bag det.</p>
     <a href="Martin G – Personligt UI_UX-projekt (Stream Deck).pdf" class="download-button" download>Download PDF</a>
   </div>
+ <div class="card-image large-image">    
+  <img src="efter-redesign.png" alt="Billede af redesign">
+  </div>
+</div>
 
+<div class="download-item">
   <div class="card">
     <h3>📜 Svendebrev</h3>
     <p>Bevis på min afsluttede IT-supporteruddannelse.</p>
     <a href="Uddannelsesbevis.pdf" class="download-button" download>Download PDF</a>
   </div>
-</section>
+   <div class="card-image large-image">
+    <img src="billede af svendebrev.jpg" alt="Billede af svendebrev eller projekt">
+  </div>
+</div>
+
+
   <hr />
      
     <section id="case">
