--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Martin Gerlach - Portfolio</title>
+  <title>Martin Gerlach – Portfolio | Multimediadesign & IT-support</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
