ændring af style.css, index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
 <main>
     <section id="om-mig">
       <h2>👤 Om mig</h2>
-      <p>Hej, jeg hedder Martin. Jeg er uddannet IT-supporter og brænder for design, teknik og brugeroplevelser.</p>
+      <p>
+    Hej, jeg hedder Martin. Jeg er 22 år gammel, uddannet IT-supporter og brænder for design, teknik og brugeroplevelser. 
+    Min interesse for IT startede tidligt, og jeg har altid elsket at forstå, hvordan ting virker – både teknisk og visuelt. 
+    Under min uddannelse fandt jeg ud af, hvor vigtigt det er, at løsninger ikke kun virker, men også er nemme og behagelige at bruge.
+    Jeg bruger min fritid på håndbold, teknologi og kreative ting, og jeg elsker at lære nyt – både på computeren og i virkeligheden.
+  </p>
+
+  <p>
+    Derfor vil jeg gerne læse multimediedesign, så jeg kan bruge både min tekniske viden og min kreative side.
+    Jeg arbejder selvstændigt og struktureret og går op i at gøre tingene ordentligt – både når jeg koder og designer.
     </section>
     <hr />
     
