change to af header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </nav>
   <header class="top-header">
   <div class="title-container">
-    <h1>🎓 Martin Gerlach - Portfolio til KEA</h1>
-    <p class="subtitle"> <em> Kreative og tekniske portfolio til optagelse på KEA</em></p>
+    <h1>🎓 Martin Gerlach – Portfolio</h1>
+<p class="subtitle"><em>Kreativ og teknisk portfolio til multimediedesign</em></p>
   </div>
   <img src="Martin G.jpg" alt="Portræt af Martin Gerlach" class="profile-img-top" />
 </header>
