ændring af kontakt sektion og footer

--- a/index.html
+++ b/index.html
@@ -89,16 +89,22 @@
     <hr />
     
     <section id="kontakt">
-      <h2>📬 Kontakt</h2>
-      <p>Mail: martin.gerlach.2950@gmail.com</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/martin-christoffer-gerlach-68272a21a/" target="_blank">Martin Gerlach</a></p>
-    </section>
+  <h2>📬 Kontakt</h2>
+  <p>
+    📧 <a href="mailto:martin.gerlach.2950@gmail.com">martin.gerlach.2950@gmail.com</a>
+  </p>
+  <p>
+    💼 <a href="https://www.linkedin.com/in/martin-christoffer-gerlach-68272a21a/" target="_blank">Martin Gerlach på LinkedIn</a>
+  </p>
+</section>
     <hr />
   </main>
 
-<footer>
+<footer style="text-align: center; margin-top: 3rem; font-style: italic; color: #666;">
+  <p>Tak fordi du besøgte min portfolio – kontakt mig gerne for spørgsmål.</p>
   <p>© 2025 Martin Gerlach</p>
 </footer>
+
 
 <script>
   const button = document.getElementById("toggle-theme");
