ændring af linkedin i kontakt sektion

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     📧 <a href="mailto:martin.gerlach.2950@gmail.com">martin.gerlach.2950@gmail.com</a>
   </p>
   <p>
-    💼 <a href="https://www.linkedin.com/in/martin-christoffer-gerlach-68272a21a/" target="_blank">Martin Gerlach på LinkedIn</a>
+    💼 <a href="https://www.linkedin.com/in/martin-christoffer-gerlach-68272a21a/" target="_blank">Min LinkedIn</a>
   </p>
 </section>
     <hr />
