tilføjelse af todo liste website

--- a/index.html
+++ b/index.html
@@ -78,14 +78,21 @@
     <img src="billede af svendebrev.jpg" alt="Billede af svendebrev eller projekt">
   </div>
 </div>
-
-
   <hr />
      
-    <section id="case">
+  <section id="case">
       <h2>🎛️ Min optagelses-case</h2>
       <p>Du kan se min hjemmeside her: <a href="https://martincgerlach.github.io/KEA-multimedia/" target="_blank">Se projektet</a></p>
     </section>
+   
+    <section id="todo-list">
+  <h2>📝 Min Todo-liste</h2>
+  <p>Prøv min interaktive todo-liste her: <a href="https://martincgerlach.github.io/eksperimenter/" target="_blank" rel="noopener noreferrer">Åben Todo-liste</a></p>
+</section>
+<hr />
+   
+   
+   
     <hr />
     
     <section id="kontakt">
