--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
   <h2>📝 Min Todo-liste</h2>
   <p>Prøv min interaktive todo-liste her: <a href="https://martincgerlach.github.io/eksperimenter/" target="_blank" rel="noopener noreferrer">Åben Todo-liste</a></p>
 </section>
+<section id="cafe-chatbot">
+  <h2>☕ Café – Chat og Klik & Hent</h2>
+  <p>En interaktiv webapp med chatbot til en fiktiv café. Brugeren kan chatte, se menuen, tilføje varer til kurven og få kontaktinformation.</p>
+  <p>Prøv projektet her: <a href=https://martincgerlach.github.io/Coastal-Brew/ target="_blank" rel="noopener noreferrer">Åben Café – Chat og Klik & Hent</a></p>
+<img src="Coastal Brew.png" alt="Forhåndsvisning af Café chatbot" style="max-width:100%; border-radius:8px; margin-top:10px;">
+</section>
 
    <hr />
     
