tilføjelse af nyt logo og ændring af html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   <ul>
     <li><a href="#om-mig">Om mig</a></li>
     <li><a href="#downloads">Downloads</a></li>
-    <li><a href="#case">Optagelses-case</a></li>
+    <li><a href="#projekter">Projekter</a></li>
     <li><a href="#kontakt">Kontakt</a></li>
     <li><button id="toggle-theme">🌘 Dark Mode</button></li>
   </ul>
 </nav>
   <header class="top-header">
   <div class="title-container">
+    <img src="Gerlach Design.svg" alt="Gerlach Design logo" style="max-height: 120px; margin-bottom: 10px;">
     <h1>🎓 Martin Gerlach – Portfolio</h1>
 <p class="subtitle"><em>Kreativ og teknisk portfolio til multimediedesign</em></p>
   </div>
@@ -78,22 +79,28 @@
     <img src="billede af svendebrev.jpg" alt="Billede af svendebrev eller projekt">
   </div>
 </div>
+</section>
   <hr />
+
+<section id="projekter">
+  <h2>🚀 Projekter</h2>
      
   <section id="case">
-      <h2>🎛️ Min optagelses-case</h2>
+      <h3>🎛️ Min optagelses-case</h3>
       <p>Du kan se min hjemmeside her: <a href="https://martincgerlach.github.io/KEA-multimedia/" target="_blank">Se projektet</a></p>
     </section>
    
     <section id="todo-list">
-  <h2>📝 Min Todo-liste</h2>
+  <h3>📝 Min Todo-liste</h3>
   <p>Prøv min interaktive todo-liste her: <a href="https://martincgerlach.github.io/eksperimenter/" target="_blank" rel="noopener noreferrer">Åben Todo-liste</a></p>
 </section>
+
 <section id="cafe-chatbot">
-  <h2>☕ Café – Chat og Klik & Hent</h2>
+  <h3>☕ Café – Chat og Klik & Hent</h3>
   <p>En interaktiv webapp med chatbot til en fiktiv café. Brugeren kan chatte, se menuen, tilføje varer til kurven og få kontaktinformation.</p>
-  <p>Prøv projektet her: <a href=https://martincgerlach.github.io/Coastal-Brew/ target="_blank" rel="noopener noreferrer">Åben Café – Chat og Klik & Hent</a></p>
+  <p>Prøv projektet her: <a href="https://martincgerlach.github.io/Coastal-Brew/" target="_blank" rel="noopener noreferrer">Åben Café – Chat og Klik & Hent</a></p>
 <img src="Coastal Brew.png" alt="Forhåndsvisning af Café chatbot" style="max-width:100%; border-radius:8px; margin-top:10px;">
+</section>
 </section>
 
    <hr />
