--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         <p><a href="https://martincgerlach.github.io/KEA-multimedia/" target="_blank" class="project-link">Se projektet →</a></p>
       </div>
       <div class="project-image">
-        <img src="admission-case-preview.jpg" alt="Forhåndsvisning af optagelses-case" style="max-width:100%; border-radius:8px;">
+        <img src="efter-redesign.png" alt="Forhåndsvisning af optagelses-case" style="max-width:100%; border-radius:8px;">
       </div>
     </section>
    
@@ -454,7 +454,7 @@
         <p><a href="https://martincgerlach.github.io/eksperimenter/" target="_blank" rel="noopener noreferrer" class="project-link">Åben Todo-liste →</a></p>
       </div>
       <div class="project-image">
-        <img src="todo-list-preview.jpg" alt="Forhåndsvisning af Todo-liste" style="max-width:100%; border-radius:8px;">
+        <img src="todo-liste.png" alt="Forhåndsvisning af Todo-liste" style="max-width:100%; border-radius:8px;">
       </div>
     </section>
 
