fjnerning af - i tekst

--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
       <h2>👤 Om mig</h2>
       <p>
     Hej, jeg hedder Martin. Jeg er 22 år gammel, uddannet IT-supporter og brænder for design, teknik og brugeroplevelser. 
-    Min interesse for IT startede tidligt, og jeg har altid elsket at forstå, hvordan ting virker – både teknisk og visuelt. 
+    Min interesse for IT startede tidligt, og jeg har altid elsket at forstå, hvordan ting virker  både teknisk og visuelt. 
     Under min uddannelse fandt jeg ud af, hvor vigtigt det er, at løsninger ikke kun virker, men også er nemme og behagelige at bruge.
-    Jeg bruger min fritid på håndbold, teknologi og kreative ting, og jeg elsker at lære nyt – både på computeren og i virkeligheden.
+    Jeg bruger min fritid på håndbold, teknologi og kreative ting, og jeg elsker at lære nyt  både på computeren og i virkeligheden.
   </p>
 
   <p>
     Derfor vil jeg gerne læse multimediedesign, så jeg kan bruge både min tekniske viden og min kreative side.
-    Jeg arbejder selvstændigt og struktureret og går op i at gøre tingene ordentligt – både når jeg koder og designer.
+    Jeg arbejder selvstændigt og struktureret og går op i at gøre tingene ordentligt  både når jeg koder og designer.
     </section>
     <hr />
 
@@ -449,7 +449,7 @@
       <div class="project-content">
         <h3>📝 Min Todo-liste</h3>
         <p><strong>Teknologier:</strong> HTML, CSS, JavaScript, Local Storage</p>
-        <p>En interaktiv todo-liste app med drag-and-drop funktionalitet og persistent data storage. Fokus på ren kode og intuitiv brugeroplevelse.</p>
+        <p>En interaktiv todo-liste app med drag and drop funktionalitet og persistent data storage. Fokus på ren kode og intuitiv brugeroplevelse.</p>
         <p><strong>Udfordringer løst:</strong> State management, data persistering, responsive layout, smooth animationer</p>
         <p><a href="https://martincgerlach.github.io/eksperimenter/" target="_blank" rel="noopener noreferrer" class="project-link">Åben Todo-liste →</a></p>
       </div>
@@ -499,7 +499,7 @@
   </main>
 
 <footer style="text-align: center; margin-top: 3rem; font-style: italic; color: #666;">
-  <p>Tak fordi du besøgte min portfolio – kontakt mig gerne for spørgsmål.</p>
+  <p>Tak fordi du besøgte min portfolio kontakt mig gerne for spørgsmål.</p>
   <p>© 2025 Martin Gerlach</p>
 </footer>
 
