tilføjelse af nyt projekt

--- a/index.html
+++ b/index.html
@@ -473,6 +473,23 @@
   </div>
 </section>
 
+<section id="forni-pizza" class="project-card">
+  <div class="project-content">
+    <h3>🍕 Forni Pizza Foodtrailer – Hjemmeside</h3>
+    <p><strong>Teknologier:</strong> HTML, CSS, PHP</p>
+    <p>En enkel hjemmeside til en pizza foodtrailer med sektioner for koncept, menu og kontakt. Designet bruger virksomhedens farver og baggrund fra logoet.</p>
+    <p><strong>Udfordringer løst:</strong> Opsætning af kontaktformular i PHP, strukturering af indhold og mobilvenligt design.</p>
+    <p><a href="https://forni.dk/" target="_blank" rel="noopener noreferrer" class="project-link">Åben Forni Pizza-projekt →</a></p>
+  </div>
+  <div class="project-image">
+    <img src="fornipizza.png" alt="Forhåndsvisning af Forni Pizza Foodtrailer hjemmeside" style="max-width:100%; border-radius:8px;">
+  </div>
+</section>
+
+
+
+
+
    <hr />
     
     <section id="kontakt">
@@ -500,7 +517,7 @@
 
 <footer style="text-align: center; margin-top: 3rem; font-style: italic; color: #666;">
   <p>Tak fordi du besøgte min portfolio kontakt mig gerne for spørgsmål.</p>
-  <p>© 2025 Martin Gerlach</p>
+  <p>© 2025 Gerlachdesign</p>
 </footer>
 
 
