tilføjelse af CV

--- a/index.html
+++ b/index.html
@@ -331,6 +331,20 @@
 
 <div class="download-item">
   <div class="card">
+    <h3>📋 CV</h3>
+    <p>Se min uddannelse, erfaring og kompetencer.</p>
+    <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
+      <a href="CV_Martin_Gerlach_DA.pdf" class="download-button" download>Download dansk CV</a>
+      <a href="CV_Martin_Gerlach_EN.pdf" class="download-button" download>Download English CV</a>
+    </div>
+  </div>
+   <div class="card-image large-image">
+    <img src="cv-preview.png" alt="Forhåndsvisning af CV">
+  </div>
+</div>
+
+<div class="download-item">
+  <div class="card">
     <h3>🖥️ Beskrivelse af optagelsescase</h3>
     <p>Se mit redesign af Elgato Stream Deck og mine tanker bag det.</p>
     <a href="Martin G – Personligt UI_UX-projekt (Stream Deck).pdf" class="download-button" download>Download PDF</a>
@@ -486,10 +500,6 @@
   </div>
 </section>
 
-
-
-
-
    <hr />
     
     <section id="kontakt">
@@ -519,7 +529,6 @@
   <p>Tak fordi du besøgte min portfolio kontakt mig gerne for spørgsmål.</p>
   <p>© 2025 Gerlachdesign</p>
 </footer>
-
 
 <script>
   const button = document.getElementById("toggle-theme");
